# novel_rag

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DAILY_PROGRESS_2025-11-13.md  DESIGN_IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  PHASE10_COMPLETION_REPORT.md  PHASE11_DESIGN_FIX_COMPLETION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_AND_PHASE3_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE3_PROGRESS_REPORT.md  PHASE4_AND_PHASE5_COMPLETION_REPORT.md  PHASE6_QUICK_VERIFY.py  PHASE6_VERIFICATION_GUIDE.md  PHASE7_COMPLETION_REPORT.md  PHASE7_FRONTEND_SETUP.md  PHASE8_COMPLETION_REPORT.md  PHASE9_COMPLETION_REPORT.md  POETRY_MIGRATION_SUMMARY.md  PRD实现对比分析-摘要版.md  PRD实现对比分析报告.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USER_GUIDE.md  backend_api_specification.yaml  docker-compose.prod.yml  docker-compose.yml  env-example.txt  package-lock.json  web前端开发需求文档.md  后端API接口设计文档.md  后端开发技术文档.md  小说RAG系统需求文档.md  接口一致性审查报告.md  接口修复完成报告.md  环境依赖准备清单.md  (+2 more)
backend/: ADVANCED_RAG_TECHNIQUES.md  CHANGELOG_LLM_LOGGING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EMBEDDING_FIX_README.md  PYTHON_VERSION_NOTE.md  QUICKSTART.md  QUICKSTART_TESTING.md  Qdrant格式问题修复.md  RAG_OPTIMIZATION_GUIDE.md  RAG_OPTIMIZATION_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  TESTING.md  TEST_SYSTEM_SUMMARY.md  TROUBLESHOOTING.md  check_processing_error.py  docker-compose.yml  env.example  migrate_novel_ids.py  migrate_token_stats.py  poetry_setup_guide.md  pyproject.toml  pytest.ini  reprocess_failed.ps1  reprocess_failed.py  requirements.txt  reset_db.py  test_api.py  test_create_novel.ps1  test_direct.py  test_embedding_fix.py  test_list_novels.py  test_schema.py  test_zhipu_api.py  verify_tests.py  使用流程说明.md  关系图谱API路由修复.md  前后端字段对齐修复文档.md  前后端对齐修复完成.md  (+9 more)
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chapters.py  config.py  deps.py  graph.py  health.py  novels.py  providers.py  query.py  stats.py  websocket.py
backend/app/core/: __init__.py  chromadb_client.py  config.py  error_handlers.py  exceptions.py  logger.py  logging.py  qdrant.py  redis.py  response.py  router.py  trace_logger.py
backend/app/db/: __init__.py  base.py  init_db.py  schema.sql  session.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  chapter.py  character_graph.py  database.py  novel.py  schemas.py  search_cache.py
backend/app/repositories/: __init__.py  chapter_repository.py  character_graph_repository.py  novel_repository.py  search_cache_repository.py
backend/app/schemas/: __init__.py  chapter.py  common.py  graph.py  novel.py  search.py  system.py
backend/app/services/: __init__.py  adaptive_prompt_builder.py  batch_api_client.py  bm25_retriever.py  confidence_calculator.py  embedding_service.py  entity_service.py  evolution_analyzer.py  graph_service.py  rag_engine.py  (+14 more)
backend/docs/: FIX_REGEX_WARNING.md  HOTFIX_GLM45_COMPATIBILITY.md  HOTFIX_GLM45_JSON_PARSING.md  LLM_API_LOGGING.md  METADATA_ENRICHMENT.md  METADATA_ENRICHMENT_IMPLEMENTATION.md  METADATA_QUICK_START.md  confidence_calculation.md  prompts_documentation.md  query_decomposition_implementation.md
backend/results/: .gitkeep  validation_results.json  validation_results_example.json
backend/scripts/: README.md  check_graph.py  check_token_stats.py  clean_entity_names.py  diagnose_hanlp.py  fix_graph_relations.py  fix_vector_dimension.py  init_db.py  migrate_add_token_fields.py  migrate_entity_aliases.py  run_tests.ps1  run_tests.py  start.sh  test_api_direct.py  test_concurrency_limits.py  test_hyde.py  test_llm_logging.py  test_metadata_extraction.py  test_rag_optimization.py  test_sustained_concurrency.py  test_timeline.py  test_token_stats_api.py  validate_relation_classifier.py  verify_env.py  verify_graph.py  verify_phase5.py  verify_phase6.py
backend/tests/: README.md  __init__.py  conftest.py  test_batch_api.py
(+215 files in other folders)
