[tool.poetry]
name = "novel-rag-backend"
version = "1.0.0"
description = "小说 RAG 分析系统后端"
authors = ["wupengyu <wupengyu-cn@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
# Web 框架
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"  # 文件上传支持

# 数据库（SQLite）
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
aiosqlite = "^0.19.0"  # SQLite 异步驱动
alembic = "^1.13.0"  # 数据库迁移

# Redis
redis = {extras = ["hiredis"], version = "^5.0.0"}
hiredis = "^2.3.0"

# 向量数据库
qdrant-client = "^1.7.0"

# LangChain 生态
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langgraph = "^0.2.45"
langchain-core = "^0.3.15"

# 智谱 AI（官方 SDK）
zai-sdk = "^0.0.4.2"

# 数据验证和配置
pydantic = "^2.12.3"
pydantic-settings = "^2.6.0"

# 文本处理
chardet = "^5.2.0"  # 编码检测
jieba = "^0.42.1"  # 中文分词
regex = "^2024.11.6"  # 正则增强

# 日志
loguru = "^0.7.2"

# HTTP 客户端
httpx = "^0.27.0"
aiohttp = "^3.11.0"

# 工具库
python-dotenv = "^1.0.0"  # .env 文件加载
tenacity = "^9.0.0"  # 重试机制
tqdm = "^4.66.0"  # 进度条
pypinyin = "^0.53.0"  # 中文拼音（人物去重）

[tool.poetry.group.dev.dependencies]
# 测试
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
faker = "^33.0.0"  # 测试数据生成

# 代码质量
ruff = "^0.8.0"  # 代码检查
black = "^24.10.0"  # 代码格式化
isort = "^5.13.0"  # import 排序
mypy = "^1.13.0"  # 类型检查

# 开发工具
ipython = "^8.29.0"
rich = "^13.9.0"  # 终端美化

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"