[tool.poetry]
name = "novel-rag-backend"
version = "0.1.0"
description = "网络小说智能问答系统 - 后端服务"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.121.3"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
websockets = "^13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# AI & LLM
zhipuai = "^2.0.1"
openai = "^2.0.0"
google-genai = "^1.52.0"
dashscope = "^1.19.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
tiktoken = "^0.5.2"

# Vector Database
chromadb = "^0.4.22"

# NLP
hanlp = "^2.1.0b55"

# Graph
networkx = "^3.2.1"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.2"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"

# File Parsing
ebooklib = "^0.18"
chardet = "^5.2.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"

# Visualization
plotly = "^5.18.0"

# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"
scipy = "^1.16.3"
jieba = "^0.42.1"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.28.1"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

